@@ -46,6 +46,7 @@ INCLUDE(ManageSourceVersionControl)
 INCLUDE(ManageTarget)
 INCLUDE(ManageTranslation)
 INCLUDE(ManageUninstall)
+ENABLE_TESTING()
 
 ####################################################################
 # Dependencies
@@ -153,7 +154,6 @@ ENDIF(CMAKE_FEDORA_ENABLE_FEDORA_BUILD)
 ####################################################################
 # Test Suites.
 #
-ENABLE_TESTING()
 ADD_TEST("ManageFile" ctest -S test/testManageFile.cmake)
 ADD_TEST("ManageString" ctest -S test/testManageString.cmake)
 ADD_TEST("ManageVariable" ctest -S test/testManageVariable.cmake)
